--- a/src/main/resources/templates/addNewCategory.html
+++ b/src/main/resources/templates/addNewCategory.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>Update Account</title>
+    <title>Add new Payment Category</title>
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
           rel="stylesheet">
@@ -13,37 +13,28 @@
 
     <div th:if="${exists}">
         <div class="alert alert-danger" role="alert">
-            <h3>Account with this E-mail exist!</h3>
+            <h3>Payment Category for this Customer exist!</h3>
         </div>
     </div>
 
-    <div th:if="${updated}">
-        <div class="alert alert-primary" role="alert">
-            <h3>Account updated...</h3>
-        </div>
-    </div>
-    <h3><td th:text="'Your role is: ' + ${roles}">Role</td></h3>
-
-    <form class="form-horizontal" th:action="@{/update}" method="POST">
+    <form class="form-horizontal" th:action="@{/addNewCategory}" method="POST">
         <fieldset>
-
-            <legend>You can change your data:</legend>
-
+            <legend>Add new Payment Category</legend>
+            <!--Input-->
             <div class="form-group">
                 <div class="col-md-4">
-                    <input id="email" name="email" type="email" placeholder="E-mail" class="form-control input-md" required="" th:value="${email}">
-                    <input id="phone" name="phone" type="tel" pattern="[0-9]{9-13}" placeholder="Mobile phone" class="form-control input-md" th:value="${phone}">
-                    <input id="address" name="address" type="text" placeholder="Address" class="form-control input-md" th:value="${address}">
+<!--                    <input id="login" name="login" type="text" placeholder="Username / login" class="form-control input-md" required="" th:value="${login}">-->
+                    <input id="name" name="name" type="text" placeholder="Category name" class="form-control input-md" required="" th:value="${name}">
+                    <input id="description" name="description" type="text" placeholder="Category description" class="form-control input-md" th:value="${description}">
                 </div>
             </div>
-
+            <!-- Button -->
             <div class="form-group">
-                <label class="col-md-4 control-label" for="update"></label>
+                <label class="col-md-4 control-label" for="addNewCategory"></label>
                 <div class="col-md-8">
-                    <button type="submit" id="update" name="update" class="btn btn-success">Update account</button>
+                    <button type="submit" id="addNewCategory" name="addNewCategory" class="btn btn-success">Add new Category</button>
                 </div>
             </div>
-
         </fieldset>
     </form>
 
