--- a/src/main/resources/templates/updateCategory.html
+++ b/src/main/resources/templates/updateCategory.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
+>
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>Update Account</title>
+    <title>Update Category</title>
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
           rel="stylesheet">
@@ -13,37 +14,27 @@
 
     <div th:if="${exists}">
         <div class="alert alert-danger" role="alert">
-            <h3>Account with this E-mail exist!</h3>
+            <h3>Category with this name already exist!</h3>
         </div>
     </div>
 
     <div th:if="${updated}">
         <div class="alert alert-primary" role="alert">
-            <h3>Account updated...</h3>
+            <h3>Category updated...</h3>
         </div>
     </div>
-    <h3><td th:text="'Your role is: ' + ${roles}">Role</td></h3>
 
-    <form class="form-horizontal" th:action="@{/update}" method="POST">
+    <form class="form-horizontal" th:action="@{/updateCategory}" method="POST">
         <fieldset>
-
-            <legend>You can change your data:</legend>
-
+            <legend th:inline="text">Category name for update: <b><span th:text="${name}">thymeleaf</span></b></legend>
             <div class="form-group">
                 <div class="col-md-4">
-                    <input id="email" name="email" type="email" placeholder="E-mail" class="form-control input-md" required="" th:value="${email}">
-                    <input id="phone" name="phone" type="tel" pattern="[0-9]{9-13}" placeholder="Mobile phone" class="form-control input-md" th:value="${phone}">
-                    <input id="address" name="address" type="text" placeholder="Address" class="form-control input-md" th:value="${address}">
+                    <input id="id" name="id" type="number" placeholder="categoryId" class="form-control input-md" required="" th:value="${id}" readonly>
+                    <input id="name" name="name" type="text" placeholder="Name" class="form-control input-md" required="" th:value="${name}">
+                    <input id="description" name="description" type="text" placeholder="Description" class="form-control input-md" th:value="${description}">
+                    <button type="submit" id="updateCategory" name="updateCategory" class="btn btn-success">Update</button>
                 </div>
             </div>
-
-            <div class="form-group">
-                <label class="col-md-4 control-label" for="update"></label>
-                <div class="col-md-8">
-                    <button type="submit" id="update" name="update" class="btn btn-success">Update account</button>
-                </div>
-            </div>
-
         </fieldset>
     </form>
 
@@ -51,7 +42,7 @@
         <label class="col-md-4 control-label"></label>
         <div class="col-md-8">
             <button class="btn btn-primary" id="back" name="back" onclick="history.back()">Backward</button>
-            <a class="btn btn-primary" href="/home" role="button">Home Page</a>
+            <a class="btn btn-primary" href="/admin" role="button">Admin Page</a>
         </div>
     </div>
 
