--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta content="width=device-width, initial-scale=1" name="viewport">
-        <title>Register new account</title>
+        <title>Register new User</title>
         <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
                 integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
                 rel="stylesheet">
@@ -13,13 +13,13 @@
 
     <div th:if="${exists}">
         <div class="alert alert-danger" role="alert">
-            <h3>Account with this Login or E-mail exist!</h3>
+            <h3>Customer with this Login or E-mail exist!</h3>
         </div>
     </div>
 
     <form class="form-horizontal" th:action="@{/register}" method="POST">
         <fieldset>
-        <legend>Register new account</legend>
+        <legend>Register new User</legend>
         <!--Input-->
         <div class="form-group">
             <div class="col-md-4">
@@ -35,7 +35,7 @@
         <div class="form-group">
             <label class="col-md-4 control-label" for="register"></label>
             <div class="col-md-8">
-                <button type="submit" id="register" name="register" class="btn btn-success">Create new account</button>
+                <button type="submit" id="register" name="register" class="btn btn-success">Create new User</button>
             </div>
         </div>
         </fieldset>
