+ Payment (Updated Entity(Model, Repo), +Add, +Delete, +Edit) + Customer (Upd. Model) + Set period + Set filters(Currency, Payment direction, Status) + HTML & Thymeleaf pages

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -22,6 +22,19 @@
 </head>
 <body>
 
+<!--    Heder   -->
+<div align="center" class="row">
+    <div class="form-group">
+        <label class="col-md-4 control-label"></label>
+        <hr>
+        <div class="col-md-8">
+            <a class="btn btn-primary" href="/home" role="button">Home Page</a>
+            <a class="btn btn-primary" href="/login?logout" role="button">Sign Out</a>
+        </div>
+        <hr>
+    </div>
+</div>
+
 <div align="center" class="row">
 
     <div class="column"></div>
@@ -45,7 +58,6 @@
                         <div class="col-md-8">
                             <a class="btn btn-primary" href="/register" role="button">Add User</a>
                             <button type="submit" id="delete_customer" name="delete_customer" class="btn btn-primary">Delete Users</button>
-                            <a class="btn btn-primary" href="/home" role="button">Home Page</a>
                         </div>
                     </div>
                 </form>
@@ -68,9 +80,8 @@
             <div class="form-group">
                 <label class="col-md-4 control-label"></label>
                 <div class="col-md-8">
-                    <a class="btn btn-primary" href="/addNewCategory" role="button">New Category</a>
+                    <a class="btn btn-primary" href="/addNewCategory" role="button">Add Category</a>
                     <button type="submit" id="delete_category" name="delete_category" class="btn btn-primary">Delete Categories</button>
-                    <a class="btn btn-primary" href="/home" role="button">Home Page</a>
                 </div>
             </div>
 
