Currency Exchange (+controller +HTML)

--- a/src/main/resources/templates/accounting.html
+++ b/src/main/resources/templates/accounting.html
@@ -59,8 +59,8 @@
                   <div class="d-grid gap-1 col-9 mx-auto">
                     <a class="btn btn-success" href="/addNewPayment" role="button">Add Payment</a>
                     <button type="submit" form="delete_payment" name="delete_payment" class="btn btn-danger">Delete Payment</button>
-                    <button id="button4id" name="button4id" class="btn btn-primary">Currency Exchange</button>
-                    <button id="button5id" name="button5id" class="btn btn-primary">Transfer to Account</button>
+                    <a class="btn btn-primary" href="/currencyExchange" role="button">Currency Exchange</a>
+                    <a class="btn btn-primary" href="/transfer" role="button">Transfer to Account</a>
                     <a class="btn btn-primary" href="/settings" role="button">Settings</a>
                     <a class="btn btn-primary" href="/home" role="button">Home Page</a>
                   </div>
