--- a/src/main/resources/templates/updateCategory.html
+++ b/src/main/resources/templates/updateCategory.html
@@ -42,7 +42,7 @@
         <label class="col-md-4 control-label"></label>
         <div class="col-md-8">
             <button class="btn btn-primary" id="back" name="back" onclick="history.back()">Backward</button>
-            <a class="btn btn-primary" href="/admin" role="button">Admin Page</a>
+<!--            <a class="btn btn-primary" href="/admin" role="button">Admin Page</a>   -->
         </div>
     </div>
 
