--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -29,7 +29,7 @@
         <hr>
         <div class="col-md-8">
             <a class="btn btn-primary" href="/home" role="button">Home Page</a>
-            <a class="btn btn-primary" href="/login?logout" role="button">Sign Out</a>
+            <a class="btn btn-primary" href="/logout" role="button">Sign Out</a>
         </div>
         <hr>
     </div>
