--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -31,7 +31,7 @@
                         <a class="btn btn-primary" href="/todo" role="button">To-Do List</a>
                         <a class="btn btn-primary" href="/settings" role="button">Settings</a>
                     </td>
-                    <a class="btn btn-primary" href="/login?logout" role="button">Sign Out</a>
+                    <a class="btn btn-primary" href="/logout" role="button">Sign Out</a>
                 </div>
             </div>
         </fieldset>
