--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -60,6 +60,7 @@
                     </div>
                 </div>
                 <h4>Edit personal data</h4>
+<!--                <b><td th:text="'Role: ' + ${roles.name()}">Role</td></b>   -->
                 <form class="form-horizontal" th:action="@{/settings}" method="POST">
                     <fieldset>
                         <div class="form-group">
